# kusa

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.ao/: ao.yaml
.ao/memory/: index.md
.ao/steering/: product.md  structure.md  tech.md
.claude/agents/: implementer.md  orchestrator.md  reviewer.md  sdd.md
.claude/commands/: release.md
.claude/commands/kiro/: ao-run.md  spec-design.md  (+10 more)
.github/: RELEASE_GUIDE.md
.github/workflows/: ci.yml  release.yml
homebrew/: kusa.rb
integrations/claude-code/: CLAUDE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs  window_presets.rs
src/components/: BufferPane.tsx  BufferPicker.tsx  ContextMenu.tsx  DropZone.tsx  EditorPane.tsx  ErrorDisplay.tsx  FileList.tsx  FilePicker.tsx  HeadingPicker.tsx  HintBar.tsx  PeekKeyHandler.tsx  PeekShell.tsx  Preview.tsx  ReadingProgress.tsx  SearchBar.tsx  SplitLayout.tsx  StatusBar.tsx  TOCPanel.tsx  TabBar.tsx
src/lib/: buffer.test.ts  buffer.ts  bufferSplitStore.ts  editor.ts  fileWatcher.ts  github.test.ts  github.ts  input-resolver.ts  keyboard.ts  markdown.test.ts  markdown.ts  rehype-source-lines.ts  scroll-sync.ts  searchService.ts  sync.ts  tabLabelResolver.test.ts  tabLabelResolver.ts  tabStore.test.ts  tabStore.ts  title-bar.test.ts  title-bar.ts  types.ts  useActiveHeading.ts  useFocusMode.ts  useReadingProgress.ts  useRecentFiles.ts  useTheme.ts  useVimNav.test.ts  useVimNav.ts  useZoom.ts
src/stores/: windowMode.ts
src/styles/: prose.css
(+92 files in other folders)
