[package]
name = "kusa"
version = "0.1.0"
description = "AI開発者のためのMarkdownエディター"
authors = ["kaze-jp"]
edition = "2021"

[lib]
name = "kusa_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
is-terminal = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
