[package]
name = "kusa"
version = "0.3.9"
description = "AI開発者のためのMarkdownエディター"
authors = ["kaze-jp"]
edition = "2021"
license = "MIT"
repository = "https://github.com/kaze-jp/kusa"

[lib]
name = "kusa_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
is-terminal = "0.4"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt"] }
dirs = "6"
notify = "7"
walkdir = "2"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
